--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
       <div class="testimonials-container" id="testimonials">
         <div class="testimonial" data-aos="fade-right" data-aos-delay="250">
             <p class="quote">"He is very dedicated and sincere at his work."</p>
-            <p class="author">- Dr. Jaisankar. S, Proffessor, VIT.</p>
+            <p class="author">- Dr. Jaisankar. S, Professor, VIT.</p>
         </div>
         <div class="testimonial" data-aos="fade-right" data-aos-delay="250">
             <p class="quote">"Worderful and creative web desines were his unique skills"</p>
