--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
             <p class="author">- Dr. Jaisankar. S, Professor, VIT.</p>
         </div>
         <div class="testimonial" data-aos="fade-right" data-aos-delay="250">
-            <p class="quote">"Worderful and creative web desines were his unique skills"</p>
+            <p class="quote">"Wonderful and creative web designes are his unique skills"</p>
             <p class="author">- Dr. Sridhar Vembu, Founder, ZOHO.</p>
         </div>
         <div class="testimonial" data-aos="fade-right" data-aos-delay="250">
