--- a/index.html
+++ b/index.html
@@ -554,11 +554,11 @@
         </div>
         <div class="testimonial" data-aos="fade-right" data-aos-delay="250">
             <p class="quote">"Wonderful and creative web designes are his unique skills"</p>
-            <p class="author">- Dr. Sridhar Vembu, Founder, ZOHO.</p>
+            <p class="author">- Dr. Lokesh Kumar R, Professor, VIT.</p>
         </div>
         <div class="testimonial" data-aos="fade-right" data-aos-delay="250">
           <p class="quote">"He is very Punctual in submitting the project on time."</p>
-          <p class="author">- Satya Nadella, CEO, Microsoft</p>
+          <p class="author">- Priyadharshini. M, Professor, VIT</p>
       </div>
       </section>
       <!-- CONTACT SECTION -->
